vlib/v/parser/tests/expr_evaluated_but_not_used_if.vv
fn main() {
  if true {
    1 + 1
    1 + 1
  } else {
    1 + 1
  }
}
